--- a/africa.html
+++ b/africa.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section info3 cid-rDhR1AWL0T" id="info3-q">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section info3 cid-rDhR1AWL0T" id="info3-q">
 
     
 
