create github pages

--- a/africa.html
+++ b/africa.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section info3 cid-rDhR1AWL0T" id="info3-q">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="mbr-section info3 cid-rDhR1AWL0T" id="info3-q">
 
     
 
@@ -418,7 +418,7 @@
                         </div>          
                         <div class="step-text-content">
                             <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Analysis &amp; Reporting</h4>
-                            <p class="mbr-step-text mbr-fonts-style display-7">CSA provideS an EDR Report and Expert Opinion Report within 5 days of the digital vehicle data acquisition&nbsp;and on receipt of all required information.</p>
+                            <p class="mbr-step-text mbr-fonts-style display-7">CSA provides an EDR Report and Expert Opinion Report within 7 days of the digital vehicle data acquisition&nbsp;and on receipt of all required information.</p>
                         </div>
                     </div>
                 </div>
