create github pages

--- a/za.html
+++ b/za.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="mbr-section info3 cid-rDzkqoAm31" id="info3-u">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section info3 cid-rDzkqoAm31" id="info3-u">
 
     
 
@@ -482,7 +482,7 @@
                 <h5 class="pb-3">
                     Contacts
                 </h5>
-                <p class="mbr-text"><a href="mailto:service@collisionsciences.ca" class="text-white">service@collisionsciences.ca</a>&nbsp;<br>Phone: <a href="tel:+1 (877) 363 .1992" class="text-white">+1 (877) 363 .1996</a>&nbsp;<br></p>
+                <p class="mbr-text"><a href="mailto:service@collisionsciences.ca" class="text-white">csa@collisionsciences.ca</a>&nbsp;<br>Phone: <a href="tel:+1 (877) 363 .1992" class="text-white">+27 71 500 2424</a>&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
