--- a/FAQ.html
+++ b/FAQ.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="mbr-section info3 cid-rDugwA2XPa mbr-parallax-background" id="info3-q">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section class="mbr-section info3 cid-rDugwA2XPa mbr-parallax-background" id="info3-q">
 
     
 
