--- a/africa.html
+++ b/africa.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section info3 cid-rDhR1AWL0T" id="info3-q">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section info3 cid-rDhR1AWL0T" id="info3-q">
 
     
 
@@ -114,7 +114,7 @@
                         <div class="testimonial-photo">
                             <img src="assets/images/theuns.gif" alt="" title="">
                         </div>
-                        <p class="mbr-text mbr-fonts-style display-7"><strong>Theunis Botha</strong><br>EDR, Accident Investigation &amp; Reconstruction Expert<br><a href="https://www.linkedin.com/in/theuns-botha-a3378a64/" target="_blank">LinkedIn</a></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><strong>Theunis Botha, CFE</strong><br>EDR, Accident Investigation &amp; Reconstruction Expert<br><a href="https://www.linkedin.com/in/theuns-botha-a3378a64/" target="_blank">LinkedIn</a></p>
                     </div>
                     <div class="card-footer">
                         
