--- a/team.html
+++ b/team.html
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
 
     
 
