create github pages

--- a/za.html
+++ b/za.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section info3 cid-rDzkqoAm31" id="info3-u">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="mbr-section info3 cid-rDzkqoAm31" id="info3-u">
 
     
 
@@ -407,7 +407,7 @@
                         </div>          
                         <div class="step-text-content">
                             <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">User Training &amp; Support</h4>
-                            <p class="mbr-step-text mbr-fonts-style display-7">CSA will train, certify and expose the CrashScan Technician to the basic functions of the CrashScan System so that, at a minimum, the user can confidently image data from supported vehicles using the standard On-Board Diagnostic (OBD II).</p>
+                            <p class="mbr-step-text mbr-fonts-style display-7">CSA will train, certify and expose the CrashScan Technician to the basic functions of the CrashScan system so that, at a minimum, the user can confidently image data from supported vehicles via the On-Board Diagnostic (OBD II) port.</p>
                         </div>
                     </div>
                 </div>
@@ -421,7 +421,7 @@
                         </div>          
                         <div class="step-text-content">
                             <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Analysis &amp; Reporting</h4>
-                            <p class="mbr-step-text mbr-fonts-style display-7">CSA provide an EDR Report and Expert Opinion Report within 7 days of the digital vehicle data acquisition&nbsp;and on receipt of all required information.</p>
+                            <p class="mbr-step-text mbr-fonts-style display-7">CSA will provide an EDR Report and Expert Opinion Report within 7 days of the digital vehicle data acquisition&nbsp;and on receipt of all required information.</p>
                         </div>
                     </div>
                 </div>
