--- a/aboutus.html
+++ b/aboutus.html
@@ -89,7 +89,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
+<section class="engine"><a href="https://mobirise.info/f">easy site creator</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
 
     
 
@@ -134,7 +134,7 @@
                 <div class="panel-item">
                     <div class="card-block">
                         <div class="testimonial-photo">
-                            <img src="assets/images/jason-1.gif" alt="" title="">
+                            <img src="assets/images/jason-headshot-outdoors-140x140.jpeg" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7">
                            Pretty Great Guy.</p>
@@ -142,7 +142,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Jason Bayley, P.Eng.</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               CEO, Founder<br><a href="https://www.linkedin.com/in/jason-bayley-p-eng-b5198924/" target="_blank" class="text-white">LinkedIn</a></small>
+                               CEO, Founder<br><a href="https://www.linkedin.com/in/jason-bayley-p-eng-b5198924/" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://www.linkedin.com/in/jason-bayley-p-eng-b5198924/" target="_blank" class="text-white">15 years Forensic Engineer, Court Expert, Pilot, 50 patents, Engineering Science Degree (McMaster)</a><br><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -157,7 +157,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Chad Zinn</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               Chief Sales Officer<br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">LinkedIn</a></small>
+                               Chief Sales Officer<br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">30 years insurance industry, Entrepreneur/Investor/Executive</a></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -170,9 +170,9 @@
                            Pretty Smart Guy.</p>
                     </div>
                     <div class="card-footer">
-                        <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Brian Hsu</div>
+                        <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Brian Hsu, P.Eng.</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               Chief Technology Officer<br><a href="https://ca.linkedin.com/in/changyunhsu" target="_blank" class="text-white">LinkedIn</a></small>
+                               Chief Technology Officer<br><a href="https://ca.linkedin.com/in/changyunhsu" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://ca.linkedin.com/in/changyunhsu" target="_blank" class="text-white">Automotive Quality Engineer, Masters in Engineering from Standford University</a><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -187,7 +187,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Michael Ball</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               Chief Information Security Officer<br><a href="https://www.linkedin.com/in/michaeljball/" target="_blank" class="text-white">LinkedIn</a></small>
+                               Chief Information Security Officer<br><a href="https://www.linkedin.com/in/michaeljball/" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://www.linkedin.com/in/michaeljball/" target="_blank" class="text-white">30 years insurance industry, former CISO Aviva/Manulife, Entrepreneur</a><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -201,7 +201,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Spencer Whyte</div>
-                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Electrical Engineer, Developer<br><a href="https://ca.linkedin.com/in/spencer-whyte-b6ba12b5" target="_blank" class="text-white">LinkedIn</a></small>
+                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Electrical Engineer, Developer<br><a href="https://ca.linkedin.com/in/spencer-whyte-b6ba12b5" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://ca.linkedin.com/in/spencer-whyte-b6ba12b5" target="_blank" class="text-white">Automotive Security Consulltant, Entrepreneur, iOS Guru</a><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -216,7 +216,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Tyler Bayley</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               VP Business Development<br><a href="https://www.linkedin.com/in/tyler-bayley-a62a1144/" target="_blank" class="text-white">LinkedIn</a></small>
+                               VP Business Development<br><a href="https://www.linkedin.com/in/tyler-bayley-a62a1144/" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://www.linkedin.com/in/tyler-bayley-a62a1144/" target="_blank" class="text-white">Commerical Insurance Sales, National Award Winning Speaker, Entrepreneur/Leader</a><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -231,7 +231,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Renan Pedrosa</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               Validation Engineer<br><a href="https://www.linkedin.com/in/renanjpedrosa/" target="_blank" class="text-white">LinkedIn</a></small>
+                               Validation Engineer<br><a href="https://www.linkedin.com/in/renanjpedrosa/" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://www.linkedin.com/in/renanjpedrosa/" target="_blank" class="text-white">Electrical Engineer, Test &amp; Validation Consultant/Entrepreneur</a><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -245,7 +245,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Xian Li</div>
-                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Platform Developer<br><a href="https://www.linkedin.com/in/xianli1988/gh-rangi-2049726/" target="_blank" class="text-white">LinkedIn</a></small>
+                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Platform Developer<br><a href="https://www.linkedin.com/in/xianli1988/gh-rangi-2049726/" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://www.linkedin.com/in/xianli1988/gh-rangi-2049726/" target="_blank" class="text-white">Full Stack Developer, Cloud &amp; Database Security Expert, Computer Science Degree</a><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -258,8 +258,8 @@
                            Pretty Patient Guy.</p>
                     </div>
                     <div class="card-footer">
-                        <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Akash Kapoor</div>
-                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Chief Financial Officer<br><a href="https://ca.linkedin.com/in/akashkapoor9" target="_blank" class="text-white">LinkedIn</a></small>
+                        <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Akash Kapoor, CA</div>
+                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Chief Financial Officer<br><a href="https://ca.linkedin.com/in/akashkapoor9" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://ca.linkedin.com/in/akashkapoor9" target="_blank" class="text-white">CPA Gold Medalist, Entrepreneur, MBA Canditate, Masters in Accounting</a><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -273,7 +273,7 @@
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Manjeet Rangi</div>
-                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Network Engineer<br><a href="https://www.linkedin.com/in/manjeet-singh-rangi-2049726/" target="_blank" class="text-white">LinkedIn</a></small>
+                        <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">Network Engineer<br><a href="https://www.linkedin.com/in/manjeet-singh-rangi-2049726/" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://www.linkedin.com/in/manjeet-singh-rangi-2049726/" target="_blank" class="text-white">Engineer, Entrepreneur, Consultant for SOCII Compliance</a><br></small>
                     </div>
                 </div>
             </div></div>
