--- a/home.html
+++ b/home.html
@@ -26,9 +26,7 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/3421151.js"></script>
-<!-- End of HubSpot Embed Code -->
+  
 </head>
 <body>
 
@@ -88,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
