--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -98,7 +98,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">Driving Intelligence from Car to Cloud<br></h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Diagnostics, AI &amp; Data Analytics</h3>
                 
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="page2.html" target="_blank"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="page2.html" target="_blank"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a> <a class="btn btn-md btn-white-outline display-4" href="https://collisionsciences.ca/reports/check_support/" target="_blank"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>VEHICLE SUPPORT</a></div>
             </div>
         </div>
     </div>
