create github pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -89,7 +89,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
 
     
 
@@ -211,7 +211,7 @@
                             <img src="assets/images/tyler.gif" alt="" title="">
                         </div>
                         <p class="mbr-text mbr-fonts-style mbr-white display-7">
-                           Pretty Pretty Guy.</p>
+                           Pretty Fun Guy.</p>
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Tyler Bayley</div>
