--- a/africa.html
+++ b/africa.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section info3 cid-rDhR1AWL0T" id="info3-q">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section info3 cid-rDhR1AWL0T" id="info3-q">
 
     
 
