create github pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -89,7 +89,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
 
     
 
@@ -157,7 +157,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Chad Zinn</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               Chief Sales Officer<br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">30 years insurance industry, Entrepreneur/Investor/Executive</a></small>
+                               Chief Sales Officer, Partner<br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">LinkedIn</a><br><br>2<a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">0 years insurance industry, Entrepreneur, Investor, Executive</a></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
