--- a/support.html
+++ b/support.html
@@ -88,7 +88,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-rE4FTJ3fhj mbr-fullscreen mbr-parallax-background" id="header2-j">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-rE4FTJ3fhj mbr-fullscreen mbr-parallax-background" id="header2-j">
 
     
 
