--- a/aboutus.html
+++ b/aboutus.html
@@ -89,7 +89,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="cid-rkfuOyiGUR mbr-parallax-background" id="header2-c">
 
     
 
@@ -142,7 +142,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Jason Bayley, P.Eng.</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               CEO, Founder<br><a href="https://www.linkedin.com/in/jason-bayley-p-eng-b5198924/" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://www.linkedin.com/in/jason-bayley-p-eng-b5198924/" target="_blank" class="text-white">15 years Forensic Engineer, Court Expert, Pilot, 50 patents, Engineering Science Degree (McMaster)</a><br><br></small>
+                               CEO, Founder<br><a href="https://www.linkedin.com/in/jason-bayley-p-eng-b5198924/" target="_blank" class="text-white">LinkedIn</a><br><br><a href="https://www.linkedin.com/in/jason-bayley-p-eng-b5198924/" target="_blank" class="text-white">15 years Forensic Engineer, Court Expert, 50 patents, Engineering Science Degree from McMaster</a><br><br></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
@@ -157,7 +157,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Chad Zinn</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               Chief Sales Officer, Partner<br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">LinkedIn</a><br><br>2<a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">0 years insurance industry, Entrepreneur, Investor, Executive</a></small>
+                               Chief Sales Officer, Partner<br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">LinkedIn</a><br><br>2<a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">0 years Insurance Industry, Entrepreneur, Investor, Executive</a></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
