create github pages

--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="media-container-column title col-12 col-md-10">
-                <h2 class="align-left mbr-bold mbr-white pb-3 mbr-fonts-style display-2">Solve Claims with Science</h2>
+                <h2 class="align-left mbr-bold mbr-white pb-3 mbr-fonts-style display-2">Start Solving Claims with Science</h2>
                 <h3 class="mbr-section-subtitle align-left mbr-light mbr-white pb-3 mbr-fonts-style display-5">Innovative Technology, Training &amp; Engineering Support</h3>
                 <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">Collision Sciences offers a universal, mobile-app-based EDR (Event Data Recorder) tool, and is the only market option that offers affordable hardware, included user training, dedicated client centric data collection, customizable cloud data analysis, strategic alerting and reporting, and engineering tech support for users.</p>
                 <div class="mbr-section-btn align-left py-4"><a class="btn btn-primary display-4" href="https://collisionsciences.ca/reports/check_support/" target="_blank">EDR VEHICLE SUPPORT</a></div>
