--- a/FAQ.html
+++ b/FAQ.html
@@ -81,7 +81,7 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-7" href="assets/files/Collision%20Sciences%20Overview%20-%20INSURANCE%20BROCHURE%20&%20Letter.pdf" target="_blank">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-7" href="assets/files/Collision%20Sciences%20Overview%20-%20INSURANCE%20BROCHURE%20&%20Letter_2020.pdf" target="_blank">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>Insurance Brochure</a></div>
         </div>
     </nav>
