create github pages

--- a/services.html
+++ b/services.html
@@ -235,7 +235,7 @@
                         <span class="mbr-iconfont mbri-search" style="color: rgb(105, 128, 194); fill: rgb(105, 128, 194);"></span>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title py-3 mbr-fonts-style display-7">✓ &nbsp;Improved Fraud Outcomes<br><br>✓ Improved Liability Decisions &amp; Subrogation Results<br><br>
+                        <h4 class="card-title py-3 mbr-fonts-style display-7">✓ &nbsp;Improved Customer Outcomes<br><br>✓ Improved Liability Decisions &amp; Subrogation Results<br><br>
 <div>✓ Injury Mitigation (Low-velocity Impacts)</div></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Example Cases: Staged Collisions, Contributory &amp; Comparative
 Negligence (Ex. Speeding, Seatbelt Use, Avoidance Opportunity).<br></p>
