create github pages

--- a/support.html
+++ b/support.html
@@ -27,9 +27,7 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/3421151.js"></script>
-<!-- End of HubSpot Embed Code -->
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
 <body>
 
