--- a/EDR-kit.html
+++ b/EDR-kit.html
@@ -27,7 +27,7 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="d7b92903-1e6d-4c06-a232-9e481afd9243";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
 <body>
 
