--- a/aboutus.html
+++ b/aboutus.html
@@ -30,6 +30,8 @@
   <!-- Start of HubSpot Embed Code -->
 <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/3421151.js"></script>
 <!-- End of HubSpot Embed Code -->
+
+<meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
 <body>
 
