--- a/team.html
+++ b/team.html
@@ -27,7 +27,7 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
 </head>
 <body>
 
