create github pages

--- a/services.html
+++ b/services.html
@@ -32,6 +32,7 @@
 <!-- End of HubSpot Embed Code -->
 
 <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+<meta name="referrer" content="no-referrer">
 </head>
 <body>
 
