--- a/EDR-kit.html
+++ b/EDR-kit.html
@@ -28,6 +28,7 @@
   
   
   <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+<meta name="referrer" content="no-referrer">
 </head>
 <body>
 
