create github pages

--- a/home.html
+++ b/home.html
@@ -26,8 +26,10 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
+  <meta http-equiv="Content-Security-Policy" content="
+script-src 'self' www.google-analytics.com ajax.googleapis.com>
 <meta name="referrer" content="no-referrer">
+
 </head>
 <body>
 
