create github pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -160,7 +160,7 @@
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style mbr-white display-7">Chad Zinn</div>
                         <small class="mbr-author-desc mbr-italic mbr-light mbr-fonts-style mbr-white display-7">
-                               Chief Sales Officer, Partner<br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">LinkedIn</a><br><br>2<a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">0 years Insurance Industry, Entrepreneur, Investor, Executive</a></small>
+                               Chief Sales Officer<br><a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">LinkedIn</a><br><br>2<a href="https://ca.linkedin.com/in/chadzinn991542" target="_blank" class="text-white">0 years Insurance Industry, Entrepreneur, Investor, Executive</a></small>
                     </div>
                 </div>
             </div><div class="mbr-testimonial align-center col-12 col-md-10">
