create github pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -141,7 +141,7 @@
             <div class="mbr-white col-md-10">
                 
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Introducting the world’s first professional and cloud-based diagnostic "Black box" crash data retrieval solution that delivers both "big data" and easy-to-read reports, relevant to every accident claim, vehicle purchase, or inspection.</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Introducing the world’s first professional and cloud-based diagnostic "Black box" crash data retrieval solution that delivers both "big data" and easy-to-read reports, relevant to every accident claim, vehicle purchase, or inspection.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://play.google.com/store/apps/details?id=ca.collisionsciences.app&hl=en_CA" target="_blank"><span class="socicon socicon-android mbr-iconfont mbr-iconfont-btn"></span>ANDROID</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://itunes.apple.com/us/app/crashscan-accident-detector/id1360629269" target="_blank"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span>iOS APP</a></div>
             </div>
