create github pages

--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@ script-src 'self' www.google-analytics.com ajax.googleapis.com>
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">The Future of Claims Investigations<br></h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">CrashScan EDR Tool, Claims Reports &amp; Engineering Support</h3>
                 
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="services.html"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a> <a class="btn btn-md btn-white-outline display-4" href="https://collisionsciences.ca/reports/check_support/" target="_blank"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>VEHICLE SUPPORT</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="services.html"><span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>LEARN MORE</a> <a class="btn btn-md btn-white-outline display-4" href="https://secure.collisionsciences.ca/info/check_support" target="_blank"><span class="mbri-info mbr-iconfont mbr-iconfont-btn"></span>VEHICLE SUPPORT</a></div>
             </div>
         </div>
     </div>
